--- a/src/app/components/ScrollStory.css
+++ b/src/app/components/ScrollStory.css
@@ -1,30 +1,43 @@
 .container {
   /* border: 1px solid; */
-  width: 500px;
+  width: 400px;
   margin-left: auto;
   margin-right: auto;
 }
 
 .image-box {
-  height: 500px;
-  width: 500px;
-  border: 1px solid;
+  height: 400px;
+  width: 400px;
+  /* border: 1px solid; */
 }
 .dialogue-box {
+  width: 400px;
   height: auto;
-  width: 500px;
-  border: 1px solid red;
   display: flex;
   align-items: center;
   justify-content: space-around;
 }
 
+.overlay-container {
+  position: relative;
+  margin: 20px 0;
+}
+
+.dialogue-box {
+  position: absolute;
+  bottom: 25%;
+}
+
 .p-elements {
-  margin: 50px;
   width: fit-content;
+  max-width: 300px;
   /* border: 1px solid green; */
   height: fit-content;
   text-align: justify;
+  background-color: white;
+  border-radius: 5px;
+  box-shadow: 0 8px 20px rgba(0, 0, 0, 0.12);
+  padding: 0px 20px;
 }
 
 .narrator {
