--- a/src/app/components/ScrollStory.css
+++ b/src/app/components/ScrollStory.css
@@ -27,6 +27,13 @@
   position: absolute;
   bottom: 25%;
 }
+.act-heading {
+  font-size: 1.5rem;
+  font-weight: bold;
+  text-align: center;
+  margin: 40px 0 20px;
+  color: #2c3e50;
+}
 
 .p-elements {
   width: fit-content;
